--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install aws cli
-      run: ./scripts/install_aws.sh
+      run: sudo ./scripts/install_aws.sh
 
     - name: Install hugo
       run: ./scripts/install_hugo.sh
