--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -26,7 +26,7 @@ jobs:
       run: HUGO_ENV=production ./hugo
 
     - name: Sync files to S3 bucket
-      run: aws s3 sync public/ s3://$AWS_S3_BUCKET --delete
+      run: aws s3 sync public/ s3://$AWS_S3_BUCKET --delete --acl public-read
 
     - name: Refresh cloudfront
       run: echo "TODO - refreshing cloudfront"
