--- a/.editorconfig
+++ b/.editorconfig
@@ -19,6 +19,10 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+[*.js]
+indent_style = space
+indent_size = 4
+
 [*.html]
 indent_style = space
 indent_size = 2
